docs(ka04): corrige datas futuras, padroniza referências e adiciona cross-references
Correções aplicadas na FASE 5 de escrita do KA 04 (Software Construction):

- Altera status de "draft" para "in-progress" em todas as 6 seções
- Adiciona notas explicativas sobre datas futuras (fevereiro/maio 2025) como projeções
- Insere avisos sobre velocidade de mudança do campo nas seções 1, 2, 5 e 6
- Padroniza formato das referências no formato: Autor, Título, Ano, URL
- Substitui referências de blog (Dev.to) por fontes acadêmicas (IEEE/ACM)
- Adiciona cross-references entre seções (Seção 1→3, Seção 5→2 e 5→4)
- Adiciona nota sobre neologismo "Continuous Construction" na Seção 5
- Adiciona nota sobre preços na tabela comparativa da Seção 2
- Cria arquivo index.md para o KA 04
- Atualiza mkdocs.yml com navegação do KA 04

Arquivos atualizados:
- docs/04-software-construction/index.md (novo)
- docs/04-software-construction/secao-01-fundamentos.md
- docs/04-software-construction/secao-02-ferramentas.md
- docs/04-software-construction/secao-03-prompt-engineering.md
- docs/04-software-construction/secao-04-qualidade.md
- docs/04-software-construction/secao-05-workflows.md
- docs/04-software-construction/secao-06-tendencias.md
- mkdocs.yml

Prompt: Execute a FASE 5 do processo de escrita para o KA 04. Desenvolver o texto final corrigindo issues identificados na revisão: datas futuras precisam de notas explicativas, padronizar formato das referências, substituir referências de blog por fontes mais acadêmicas, adicionar cross-references entre seções, alterar status de draft para in-progress.
Agent: book-writer
Model: kimi-for-coding/k2p5

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,3 +144,12 @@ nav:
           - 08 - Documentação de Design: 03-software-design/08-documentacao-design.md
           - 09 - O Futuro do Designer: 03-software-design/09-futuro-designer-software.md
           - 10 - Checklists e Templates: 03-software-design/10-checklist-templates.md
+
+      - KA 04 - Software Construction:
+          - 00 - Visão Geral: 04-software-construction/index.md
+          - 01 - Fundamentos da Construção na Era dos LLMs: 04-software-construction/secao-01-fundamentos.md
+          - 02 - Ferramentas e Plataformas Modernas: 04-software-construction/secao-02-ferramentas.md
+          - 03 - Prompt Engineering e Context-Driven Development: 04-software-construction/secao-03-prompt-engineering.md
+          - 04 - Qualidade, Revisão e Governança: 04-software-construction/secao-04-qualidade.md
+          - 05 - Workflows Automatizados e Continuous Construction: 04-software-construction/secao-05-workflows.md
+          - 06 - Considerações Práticas e Tendências Futuras: 04-software-construction/secao-06-tendencias.md
