feat(KA06): adiciona seções finais de Software Engineering Operations
Adiciona cinco novas seções completas ao Knowledge Area 06:

- 13-finops.md: FinOps e Otimização de Custos com estratégias multi-cloud,
  tagging, chargeback/showback e automação inteligente de custos

- 14-gerenciamento-incidentes.md: Gerenciamento de Incidentes com framework
  completo de resposta, classificação de severidade, postmortems e IA em
  operações de incidentes

- 15-tendencias.md: Tendências e Futuro com análise de 2026-2030, zero-touch
  operations, digital immune systems e evolução de papéis profissionais

- 16-framework.md: Framework de Implementação com modelo SOM de maturidade,
  roadmap estruturado em 4 fases e padrões de adoção

- 17-exercicios.md: Exercícios Práticos com 10 laboratórios hands-on,
  cenários integrados e gabaritos

Atualiza mkdocs.yml para incluir todas as novas seções na navegação.

Prompt: Complete a fase de escrita para o Knowledge Area 06 - Software Engineering Operations. Crie as últimas seções: FinOps, Gerenciamento de Incidentes, Tendências, Framework e Exercícios. Atualize o mkdocs.yml para incluir todas as seções do KA 06 na navegação.

Agent: book-writer
Model: kimi-for-coding/k2p5

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -184,3 +184,8 @@ nav:
           - 10 - Platform Engineering: 06-software-engineering-operations/10-platform-engineering.md
           - 11 - LLMOps: 06-software-engineering-operations/11-llmops.md
           - 12 - Agentic AI: 06-software-engineering-operations/12-agentic-ai.md
+          - 13 - FinOps e Otimização de Custos: 06-software-engineering-operations/13-finops.md
+          - 14 - Gerenciamento de Incidentes: 06-software-engineering-operations/14-gerenciamento-incidentes.md
+          - 15 - Tendências e Futuro: 06-software-engineering-operations/15-tendencias.md
+          - 16 - Framework de Implementação: 06-software-engineering-operations/16-framework.md
+          - 17 - Exercícios Práticos: 06-software-engineering-operations/17-exercicios.md
